examples/kube/networking/ms-aggr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-aggr
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-aggr-a
spec:
  host: ms-aggr-a
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-aggr-b
spec:
  host: ms-aggr-b
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-aggr-c
spec:
  host: ms-aggr-c
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-aggr-frontend
spec:
  host: ms-aggr-frontend
  subsets:
    - name: v1
      labels:
        version: v1
---

#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: ms-aggr-frontend
#spec:
#  hosts:
#    - ms-aggr-frontend
#  gateways:
#    - ms-aggr
#  http:
#    - match:
#        - uri:
#            exact: /api/frontend
#      route:
#        - destination:
#            host: ms-aggr-frontend
#            port:
#              number: 80
#            subset: v1
#---
#
