examples/kube/networking/ms-branch.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-branch
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch
spec:
  hosts:
    - "*"
  gateways:
    - ms-branch
  http:
    - match:
        - uri:
            prefix: /api/v1/ms-branch/frontend
      route:
        - destination:
            host: ms-branch-frontend
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-branch/a
      route:
        - destination:
            host: ms-branch-a
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-branch/b
      route:
        - destination:
            host: ms-branch-b
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-branch/c
      route:
        - destination:
            host: ms-branch-c
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-branch/d
      route:
        - destination:
            host: ms-branch-d
            port:
              number: 80
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch-frontend
spec:
  hosts:
    - ms-branch-frontend
  http:
    - route:
        - destination:
            host: ms-branch-frontend
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch-a
spec:
  hosts:
    - ms-branch-a
  http:
    - route:
        - destination:
            host: ms-branch-a
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch-b
spec:
  hosts:
    - ms-branch-b
  http:
    - route:
        - destination:
            host: ms-branch-b
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch-c
spec:
  hosts:
    - ms-branch-c
  http:
    - route:
        - destination:
            host: ms-branch-c
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-branch-d
spec:
  hosts:
    - ms-branch-d
  http:
    - route:
        - destination:
            host: ms-branch-d
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-branch-a
spec:
  host: ms-branch-a
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-branch-b
spec:
  host: ms-branch-b
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-branch-c
spec:
  host: ms-branch-c
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-branch-d
spec:
  host: ms-branch-d
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-branch-frontend
spec:
  host: ms-branch-frontend
  subsets:
    - name: v1
      labels:
        version: v1
---
