examples/kube/networking/ms-chain.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-chain
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-chain
spec:
  hosts:
    - "*"
  gateways:
    - ms-chain
  http:
    - match:
        - uri:
            prefix: /api/v1/ms-chain/frontend
      route:
        - destination:
            host: ms-chain-frontend
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-chain/a
      route:
        - destination:
            host: ms-chain-a
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-chain/b
      route:
        - destination:
            host: ms-chain-b
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-chain/c
      route:
        - destination:
            host: ms-chain-c
            port:
              number: 80
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-chain-frontend
spec:
  hosts:
    - ms-chain-frontend
  http:
    - route:
        - destination:
            host: ms-chain-frontend
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-chain-a
spec:
  hosts:
    - ms-chain-a
  http:
    - route:
        - destination:
            host: ms-chain-a
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-chain-b
spec:
  hosts:
    - ms-chain-b
  http:
    - route:
        - destination:
            host: ms-chain-b
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-chain-c
spec:
  hosts:
    - ms-chain-c
  http:
    - route:
        - destination:
            host: ms-chain-c
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-chain-a
spec:
  host: ms-chain-a
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-chain-b
spec:
  host: ms-chain-b
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-chain-c
spec:
  host: ms-chain-c
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-chain-frontend
spec:
  host: ms-chain-frontend
  subsets:
    - name: v1
      labels:
        version: v1
---
