examples/kube/networking/ms-proxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-proxy
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-proxy
spec:
  hosts:
    - "*"
  gateways:
    - ms-proxy
  http:
    - match:
        - uri:
            prefix: /api/v1/ms-proxy/frontend
      route:
        - destination:
            host: ms-proxy-frontend
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-proxy/a
      route:
        - destination:
            host: ms-proxy-a
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-proxy/b
      route:
        - destination:
            host: ms-proxy-b
            port:
              number: 80
            subset: v1
    - match:
        - uri:
            prefix: /api/v1/ms-proxy/c
      route:
        - destination:
            host: ms-proxy-c
            port:
              number: 80
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-proxy-frontend
spec:
  hosts:
    - ms-proxy-frontend
  http:
    - route:
        - destination:
            host: ms-proxy-frontend
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-proxy-a
spec:
  hosts:
    - ms-proxy-a
  http:
    - route:
        - destination:
            host: ms-proxy-a
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-proxy-b
spec:
  hosts:
    - ms-proxy-b
  http:
    - route:
        - destination:
            host: ms-proxy-b
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms-proxy-c
spec:
  hosts:
    - ms-proxy-c
  http:
    - route:
        - destination:
            host: ms-proxy-c
            subset: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-proxy-a
spec:
  host: ms-proxy-a
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-proxy-b
spec:
  host: ms-proxy-b
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-proxy-c
spec:
  host: ms-proxy-c
  subsets:
    - name: v1
      labels:
        version: v1
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ms-proxy-frontend
spec:
  host: ms-proxy-frontend
  subsets:
    - name: v1
      labels:
        version: v1
---
